source/ROS2/Sensor_Ros2/log/build_2025-10-05_14-54-02/sub_robot_sim/stderr.log
/home/ubuntu/Intel_study/Intel7_Final_Project_5_Team/RoS2/Sensor_Ros2/src/sub_robot_sim/src/mock_main_odom.cpp: In member function ‘void MockMainOdomNode::on_timer()’:
/home/ubuntu/Intel_study/Intel7_Final_Project_5_Team/RoS2/Sensor_Ros2/src/sub_robot_sim/src/mock_main_odom.cpp:68:43: error: ‘toMsg’ is not a member of ‘tf2’
   68 |     odom_msg.pose.pose.orientation = tf2::toMsg(q);
      |                                           ^~~~~
gmake[2]: *** [CMakeFiles/mock_main_odom.dir/build.make:76: CMakeFiles/mock_main_odom.dir/src/mock_main_odom.cpp.o] 오류 1
gmake[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/mock_main_odom.dir/all] 오류 2
gmake: *** [Makefile:146: all] 오류 2
